# PrusaSlicer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  conanfile.py
.history/: CMakeLists_20250110171943.txt
bundled_deps/admesh/: CMakeLists.txt
bundled_deps/avrdude/: CMakeLists.txt
bundled_deps/imgui/: CMakeLists.txt
bundled_deps/libigl/: CMakeLists.txt
inner_cmake/modules/: ExternalConfig.cmake
src/: CMakeLists.txt
src/clipper/: CMakeLists.txt
src/libslic3r/: CMakeLists.txt
src/libslic3r/Format/: SL1_SVG.cpp
src/occt_wrapper/: CMakeLists.txt
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: PhysicalPrinterDialog.cpp  Plater.cpp
tests/: CMakeLists.txt
tests/cpp17/: CMakeLists.txt
